<resources>
    <string name="app_name">PocketManga</string>
    <string name="manga_list">Manga List</string>
    <string name="to_read">To Read</string>
    <string name="reading">Reading</string>
    <string name="completed">Completed</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="downloaded">Downloaded</string>
    <string name="definitions">Definitions</string>
    <string name="chose_the_chapters_for_download">Chose the chapters for download</string>
    <string name="download_chapters">Download Chapters</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="insert_username">Insert Username</string>
    <string name="insert_password">Insert Password</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="library_list">Library List:</string>
    <string name="chapters">Chapters</string>
    <string name="more_info">More Info</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="reading_mode">Reading Mode:</string>
    <string name="scroll">Scroll</string>
    <string name="paginated">Paginated</string>
    <string name="theme">Theme:</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="server">Server:</string>
    <string name="mangas">Mangas</string>
    <string name="on_favorites">On Favorites:</string>
    <string name="have_x_in_total">Have x in total</string>
    <string name="on_library_to_read">On Library To Read:</string>
    <string name="on_library_reading">On Library Reading:</string>
    <string name="on_library_completed">On Library Completed:</string>
    <string name="on_downloaded">On Downloaded:</string>
    <string name="title">Title</string>
    <string name="alternative_title">Alternative Title</string>
    <string name="original_title">Original Title</string>
    <string name="author">Author</string>
    <string name="categories">Categories</string>
    <string name="release_on">Release On</string>
    <string name="server_v2">Server</string>
    <string name="status">Status</string>
    <string name="oneshot">Oneshot</string>
    <string name="r18">R18</string>
    <string name="action">Action</string>
    <string name="_20">(20)</string>
    <string name="_3_min_ago">3 min ago</string>
    <string name="checkbox">CheckBox</string>
    <string name="delete_download">Delete Download</string>
    <string name="download_manga">Download Manga</string>
    <string name="search_mangas">Search Mangas</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <string name="chose_at_least_one_chapter">Chose at least one chapter</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="downloading">Downloading</string>
    <string name="download_completed">Download Completed</string>
    <string name="error">Error</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="the_username_or_password_is_incorrect">The username or password is incorrect</string>
    <string name="none">None</string>
    <string name="removed_from_download_with_success">Removed from Download with success</string>
    <string name="reader">Reader</string>
    <string name="no_connection_to_the_internet">No connection to the internet</string>
    <string name="ongoing">Ongoing</string>
    <string name="yes">Yes</string>
    <string name="point">.</string>
    <string name="_255">255</string>
    <string name="device_ip_insert_ip">Device IP (Insert IP)</string>
    <string name="invalid_ip_number">Invalid Ip Number</string>
</resources>