<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray"
    android:paddingTop="15dp"
    tools:context=".activitys.MangaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/IVManga"
            android:layout_width="110dp"
            android:layout_height="146dp"
            app:srcCompat="@drawable/manga_alternative" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DescriptionTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/colorPurple"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVDescriptionTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="5"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/library_list"
                    android:textColor="@color/colorPurple"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/SPLibrary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TLBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/colorPurple"
        app:tabSelectedTextColor="@color/colorPurple"
        app:tabTextColor="@color/colorBlack">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TIInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TIChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapters"
            android:textStyle="bold" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/VP"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>